assets/css/style.css
/* pseudo class for white and black color */
:root {
    --white: white;
    --black: black;
}

/* makes scrolling smooth in entire page */
html {
    scroll-behavior: smooth;
}

/* main content */
/* sets main background color and font family */
body {
    background-color: var(--black);
    font-family: 'Newsreader', sans-serif;

}

.header {
    display: flex;
}

/* separates left section of main  */
.left-section-main {
    width: 50%;
    display: flex;
    flex-wrap: wrap;
    color: var(--white);
}

/* adds styles to headshot image */
.head-shot {
    height: 280px;
    width: 280px;
    margin: 50px auto 30px auto;
    filter: grayscale(75%);
    border-radius: 100px;
    box-shadow: -1px 0 50px rgb(101, 101, 101);
}

/* styles h1 and adds text shadow*/
h1 {
    font-size: 7rem;
    text-align: center;
    margin: 30px 60px;
    font-weight: 200;
    text-shadow: 0 0 10px var(--white);
}

/* styles words under Luis Mansilla on main */
.main-description {
    font-size: 24px;
    margin: 0px auto 60px auto;
    text-align: center;
    line-height: 39px;
}

.main-p {
    display: flex;
    flex-direction: column;
    font-weight: 200;
    font-size: 2rem;
    
}

/* separates right section of main */
.right-section-main {
    width: 50%;
    display: flex;
}

/* centers nav */
.main-nav {
    margin: 0 auto;
}

/* changes nav link direction to column using flex */
.main-links {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-content: center;
}

.main-links li{
    margin: 0 auto;
}

/* styles main nav buttons with linear gradient */
.main-button {
    margin: 50px auto;
    height: 185px;
    width: 450px;
    opacity: 0.6;
    background: linear-gradient(rgb(35, 35, 35), rgb(115, 111, 111));
    border: 1px solid var(--black);
    border-radius: 15px;
    font-size: 4rem;
    font-weight: 400;
    color: var(--white);
}

/* makes nav buttons move up and adds a box shadow when its hovered over */
.main-button:hover {
    box-shadow: -1px 0 50px var(--white);
    opacity: 100;
    cursor: pointer;
    transform: translateY(-5px);
    transition: .5s ease-in-out;
}

/* moves nav buttons when they're clicked */
.main-button:active {
    transform: translateY(5px);
    transition: .1s;
}

/* displays flex in about me container */
.about-me-container {
    display: flex;
    flex-wrap: wrap;
}

h2 {
    font-size: 5rem;
    color: var(--white);
    text-align: center;
    margin: 36px auto;
    width: 100%;
}

/* centers paragraph in about me section and defines line height */
.about-me-p {
    color: var(--white);
    font-size: 1.3rem;
    text-align: center;
    line-height: 50px;
    margin: 40px 280px 86px 280px;
}

/* hides about me anchor point */
#about-me {
    color: var(--black);
    font-size: 1px;
}

/* UT and edX logos */
.edx-logo {
    height: 100px;
    width: 25%;
    margin: 37px 0px 40px 183px;
}

.ut-logo {
    height: 126px;
    width: 40%;
    margin: 20px 20px 20px 0px;
}

/* displays flex in contanct section */
/* .contact-container {
    display: flex;
    flex-wrap: wrap;
    margin: 0 0 50px 0;
} */

#contact-anchor {
    height: 5rem;
}

.contact-h2 {
    height: 97px;
    width: 100%;
    margin: 45px 0;
}

.main-icon-container {
    display: flex;
    justify-content: space-around;
}

.contact-globe-container {
    display: flex;
}

.contact-social-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 7%;
}

/* .main-icon-container {
    display: flex;
    justify-content: space-around;
}

.contact-icon-container {
    flex: 1;
} */



/* used invert to invert colors in icon */
.contact-globe-img {
    filter: invert();
    width: 100%;
    margin: 2rem auto;
}

/* .contact-icon-container {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin: 0px auto;
} */

.contact-icon-img {
    filter: invert();
    /* height: 550%; */
}

.contact-icon-img:hover {
    box-shadow: 0 0 25px var(--black);
}

.top-a {
    display: flex;
    justify-content: center;
    color: var(--white);
    margin: 115px auto;
    font-size: 1rem;
}

/* changes background color or projects section */
.projects-container {
    background: rgba(169, 163, 163, 0.647);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

.projects-h2 {
    color: var(--white);
}

/* gives projects a width to fit on page */
.projects-container a{
    width: 27%;
    margin: 0px 10px;
}

/* places a label over the project screenshots */
h3 {
    background: var(--white);
    text-align: center;
    position: relative;
    top: -140px;
    color: var(--white);
    padding: 2px 0; 
    text-shadow: 0 0 20px var(--black);
}

/* makes project screenshots bigger when hovered over */
h3:hover {
    scale: 1.1;
} 

.projects-container h2{
    margin: 32px auto;
    text-shadow: 0 0 5px var(--black);
}

/* styles project screenshots making them black and white before hover */
.project-img {
    width: 100%;
    height: 75%;
    border-radius: 18px;
    filter: grayscale(60%);
    border: 2px solid rgb(190, 184, 184);
    box-shadow: 5px 5px 25px rgb(42, 42, 42);
}

/* makes images turn to color when hovered over */
.project-img:hover {
    filter: none;
    scale: 1.1;
    border: none;

}

.projects-top-a {
    display: flex;
    justify-content: center;
    color: var(--white);
    margin: 60px auto;
}

/* MEDIA QUERIES */

@media screen and (max-width: 992px) {

    .header {
        flex-wrap: wrap;
    }

    /* makes left section take up entire width */
    .left-section-main {
        width: 100%;
        flex-direction: column;
        flex-wrap: wrap;
    }

    h1 {
        margin: 0 auto;
    }

    .head-shot {
        margin: 45px auto;
    }

    .right-section-main {
        width: 100%;
        justify-content: space-between;
    }
    
    /* places links at bottom of page and distributes them in a row */
    .main-links {
        width: 100%;
        flex-direction: row;
        justify-content: space-around;
    }

    /* makes nav take up entire width */
    .main-nav {
        width: 100%;
    }

    .main-links li {
        width: 25%;
    }

    /* sizes buttons */
    .main-button {
        width: 100%;
        font-size: 35px;
        margin: 0 auto;
        height: 80px;
    }

    .about-me-p {
        margin: 40px 25px 75px 25px;
    }

    .contact-container {
        margin: 0;
    }

    .top-a {
        color: var(--white);
        margin: 50px auto;
    }

    .projects-container h2{
        margin: 60px auto;
    }

}

@media screen and (max-width: 768px) {
    /* change font sizes for mobile */
    h1 {
        font-size: 4rem;
    }

    .main-p {
        font-size: 1rem;
    }

    .main-button {
        font-size: 1rem;
    }

    .main-links li {
        width: 30%;
    }

    .about-me-p {
        line-height: 1.7rem;
        font-size: 1rem;
    }

    .contact-globe-img {
        width: 65%;
    }

    .contact-h2 {
        font-size: 65px;
    }

    .edx-logo {
        margin: 25px 35px;
    }

    .top-a {
        margin: 52px auto;
        padding-bottom: 21px;
    }

    .ut-logo {
        height: 124px;
        width: 45%;
        margin: 3px;
    }

    .projects-container {
        padding: 25px 25px 40px 25px;
    }
    .projects-container h2 {
        font-size: 4rem;
        margin: 40px auto 33px;
    }

    .projects-container a {
        width: 33%;
        margin: 14px 10px;
    }

    .project-img {
        margin: 13px auto 65px auto
    }

    /* resizes headshot */
    .head-shot {
        height: 236px;
        width: 43%;
    }
}

